# higgsfield-tore-task

./: .dockerignore  .env.example  CHALLENGE.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-29-memory-service.md
docs/superpowers/specs/: 2026-05-29-memory-service-design.md
fixtures/: recall_quality.json
scripts/: prefetch_models.py
src/memory_service/: app.py  config.py  main.py  tokens.py
src/memory_service/db/: pool.py  schema.sql
src/memory_service/extraction/: keys.py  llm_extractor.py  pipeline.py  rules.py
src/memory_service/llm/: client.py
src/memory_service/models/: domain.py  schemas.py
src/memory_service/recall/: assembler.py  embedder.py  fusion.py  query_rewrite.py  reranker.py
src/memory_service/repositories/: memories.py  turns.py
src/memory_service/routes/: admin.py  health.py  memories.py  recall.py  search.py  turns.py
src/memory_service/services/: ingest.py  recall_service.py  reconcile.py
tests/integration/: conftest.py  test_concurrency.py  test_ingest.py  test_memories_repo.py  test_migrate.py  test_persistence.py  test_recall_quality.py  test_recall_service.py  test_robustness.py  test_routes.py  test_turns_repo.py
tests/unit/: test_assembler.py  test_config.py  test_embedder.py  test_extraction_pipeline.py  test_fusion.py  test_keys.py  test_llm_client.py  test_query_rewrite.py  test_reconcile.py  test_reranker.py  test_rules.py  test_schemas.py
